--- a/pyproject.toml
+++ b/pyproject.toml
@@ -21,6 +21,7 @@ dependencies = [
     "python-multipart>=0.0.20",
     "pyyaml>=6.0.2",
     "sendgrid>=6.10.0",
+    "tabulate>=0.9.0",
     "uvicorn>=0.34.0",
     "yarl>=1.18.3",
 ]
